--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcc 'F2001'
 - !lcsh 'Antigua -- Description and travel'
 - !lcsh 'Antigua -- History'
+- GITenberg
 title: "Antigua and the Antiguans, Volume 1 (of 2)\r\nA full account of the colony\
   \ and its inhabitants from the time of the Caribs to the present day"
 url: http://www.gutenberg.org/ebooks/38788
